fix bug dark mode and center image

--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,11 @@ img {
     height: auto;
 }
 
+.imgprofil {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 /* MEDIA QUERIES */
 
 @media screen and (max-width:990px) {
@@ -308,11 +313,6 @@ img {
         margin: 0 20px;
     }
 
-    .imgprofil {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
     .side-bar li p span {
         width: 22%;
         margin-left: 32%;
@@ -352,13 +352,10 @@ img {
         width: 42%;
         margin-left: 8%;
     }
-    .side-bar img {
-        
-        
-    }
+    
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:440px) {
     .side-bar li p span {
         width: 40%;
         margin-left: 5%;
@@ -368,10 +365,25 @@ img {
     }
 }
 
-@media screen and (max-width:300px) {
+@media screen and (max-width:360px) {
     header h1 {
         font-size: 20px;
     }
+    h2 {
+        font-size: 12px;
+    }
+    .side-bar li p span {
+        width: 36%;
+        font-size: 12px;
+    }
 }
+
+@media screen and (max-width:320px) {
+    .side-bar li p span {
+        width: 34%;
+        font-size: 10px;
+    }
+}
+
 
 
